syntax = "proto3";

package flowcraft_proto.v1;

import "base.proto";
import "core/node.proto";
import "core/signals.proto";
import "action.proto";

message FlowMessage {
  string message_id = 1;
  int64 timestamp = 2;

  oneof payload {
    SyncRequest sync_request = 10;
    bytes yjs_update = 11;
    UpdateNodeRequest node_update = 12;
    UpdateWidgetRequest widget_update = 13;
    ActionExecutionRequest action_execute = 14;
    ActionDiscoveryRequest action_discovery = 17;
    TaskCancelRequest task_cancel = 15;
    ViewportUpdate viewport_update = 16;
    WidgetSignal widget_signal = 18;

    GraphSnapshot snapshot = 20;
    MutationList mutations = 21;
    ActionDiscoveryResponse actions = 25;
    TaskUpdate task_update = 22;
    StreamChunk stream_chunk = 23;
    ErrorResponse error = 24;
  }
}

message SyncRequest { string graph_id = 1; }

message UpdateNodeRequest {
  string node_id = 1;
  NodeData data = 2;
  Position position = 3;
}

message UpdateWidgetRequest {
  string node_id = 1;
  string widget_id = 2;
  string value_json = 3;
}

message ViewportUpdate {
  Viewport viewport = 1;
  Rect visible_bounds = 2;
}

message MutationList {
  repeated GraphMutation mutations = 1;
  int64 sequence_number = 2;
}

message StreamChunk {
  string node_id = 1;
  string widget_id = 2;
  string chunk_data = 3;
  bool is_done = 4;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
}

message GraphSnapshot {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
  int64 version = 3;
}

message GraphMutation {
  oneof operation {
    AddNode add_node = 1;
    UpdateNode update_node = 2;
    RemoveNode remove_node = 3;
    AddEdge add_edge = 4;
    RemoveEdge remove_edge = 5;
    AddSubGraph add_subgraph = 6;
    ClearGraph clear_graph = 7;
  }
}

message AddNode { Node node = 1; }
message UpdateNode {
  string id = 1;
  NodeData data = 2;
  Position position = 3;
  string parent_id = 4;
  double width = 5;
  double height = 6;
}
message RemoveNode { string id = 1; }
message AddEdge { Edge edge = 1; }
message RemoveEdge { string id = 1; }
message AddSubGraph { repeated Node nodes = 1; repeated Edge edges = 2; }
message ClearGraph {}

message TaskCancelRequest { string task_id = 1; }

service FlowService {
  // 建立流连接，持续接收图状态更新（替代当前的信封协议分发逻辑）
  rpc WatchGraph(SyncRequest) returns (stream FlowMessage);

  // 执行单次变更
  rpc ApplyMutations(MutationList) returns (ErrorResponse);

  // 更新节点状态
  rpc UpdateNode(UpdateNodeRequest) returns (ErrorResponse);

  // 更新 Widget 值
  rpc UpdateWidget(UpdateWidgetRequest) returns (ErrorResponse);

  // 发送 Widget 信号
  rpc SendWidgetSignal(WidgetSignal) returns (ErrorResponse);

  // 执行 Action
  rpc ExecuteAction(ActionExecutionRequest) returns (ErrorResponse);

  // 发现可用的 Action
  rpc DiscoverActions(ActionDiscoveryRequest) returns (ActionDiscoveryResponse);

  // 取消任务
  rpc CancelTask(TaskCancelRequest) returns (ErrorResponse);
}